fixed overflow, and body width

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 body {
   font-family: "Inter";
-  overflow-x: hidden;
+  /* position: fixed; */
+  overflow-y: scroll;
+
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+html {
+  min-width: fit-content;
 }
 
 .touchAction {
@@ -8,13 +17,14 @@ body {
 }
 
 .container {
+  overflow: hidden;
   display: grid;
   height: 100vh;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 0.2fr 1.5fr 1.2fr 0.8fr;
   grid-template-areas: "nav nav nav" "header header sidebar" "content1 content2 sidebar" "content3 content4 content5";
   gap: 1.8rem;
-  padding: 0px 5px 0px 5px;
+  padding: 5px 10px 10px 10px;
 }
 
 /* start nav */
@@ -44,7 +54,7 @@ nav ul {
 }
 
 #innerMenu {
-  height: 40%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -52,6 +62,7 @@ nav ul {
 
 ul li {
   cursor: pointer;
+  font-size: 25px;
 }
 
 .openMenu {
@@ -84,7 +95,7 @@ nav img {
   transform: translate(80%, 0);
   /* transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); */
   width: 120%;
-  height: 100vh;
+  height: 1000px;
   z-index: 99;
 }
 
@@ -157,7 +168,7 @@ header img {
 
 @media only screen and (max-width: 550px) {
   .container {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
     grid-template-rows: 80px 350px 120px 170px 450px 175px 175px 175px;
     /* grid-template-rows: auto auto auto auto auto auto auto auto; */
     height: 100%;
